# regopt

./: CMakeLists.txt  README.md  boost-python.cmake
src/: CMakeLists.txt  fastrapp.cpp  fastrapp.hpp  problem_description.cpp  problem_description.hpp  rotreg.cpp  sco_examples.cpp  sqp_reg.cpp  sqpreg.cpp  sqpreg.hpp  tps_costs.cpp  tps_costs.hpp  tps_fit_problem.cpp  tps_fit_problem.hpp  tps_reg_fit_problem.cpp  tps_reg_fit_problem.hpp
src/sqpregpy/: CMakeLists.txt  CMakeLists.txt~  numpy_utils.hpp  pyshape_context.cpp  pyshape_context.hpp  sqpregpy.cpp
src/tests/: CMakeLists.txt  test_shape_context.cpp  test_sqpreg.cpp
src/utils/: CMakeLists.txt  eigen_utils.cpp  eigen_utils.hpp  opt_utils.cpp  opt_utils.hpp
